y.output
Terminals unused in grammar

    UMINUS


State 81 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: global_list

    2 global_list: global
    3            | global global_list

    4 global: function
    5       | declaration

    6 statement_list: statement
    7               | statement_list statement

    8 print_list: print_item
    9           | print_list ',' print_item

   10 expression_list: expression
   11                | print_list ',' expression

   12 variable_list: identifier
   13              | variable_list ',' identifier

   14 argument_list: %empty
   15              | expression_list

   16 parameter_list: %empty
   17               | variable_list

   18 declaration_list: declaration
   19                 | declaration_list declaration

   20 function: FUNC identifier '(' parameter_list ')' statement

   21 statement: assign_statement
   22          | return_statement
   23          | print_statement
   24          | if_statement
   25          | if_else_statement
   26          | while_statement
   27          | null_statement
   28          | block

   29 block: OPENBLOCK declaration_list statement_list CLOSEBLOCK
   30      | OPENBLOCK statement_list CLOSEBLOCK

   31 assign_statement: identifier ASSIGNMENT expression

   32 return_statement: RETURN expression

   33 print_statement: PRINT print_list

   34 null_statement: CONTINUE

   35 if_statement: IF relation THEN statement

   36 if_else_statement: IF relation THEN statement ELSE statement

   37 while_statement: WHILE relation DO statement

   38 relation: expression '=' expression
   39         | expression '<' expression
   40         | expression '>' expression

   41 expression: expression '|' expression
   42           | expression '^' expression
   43           | expression '&' expression
   44           | expression LSHIFT expression
   45           | expression RSHIFT expression
   46           | expression '+' expression
   47           | expression '-' expression
   48           | expression '*' expression
   49           | expression '/' expression
   50           | '-' expression
   51           | '~' expression
   52           | '(' expression ')'
   53           | number
   54           | identifier
   55           | identifier '(' argument_list ')'

   56 declaration: VAR variable_list

   57 print_item: expression
   58           | string

   59 identifier: IDENTIFIER

   60 number: NUMBER

   61 string: STRING


Terminals, with rules where they appear

    $end (0) 0
    '&' (38) 43
    '(' (40) 20 52 55
    ')' (41) 20 52 55
    '*' (42) 48
    '+' (43) 46
    ',' (44) 9 11 13
    '-' (45) 47 50
    '/' (47) 49
    '<' (60) 39
    '=' (61) 38
    '>' (62) 40
    '^' (94) 42
    '|' (124) 41
    '~' (126) 51
    error (256)
    LSHIFT (258) 44
    RSHIFT (259) 45
    UMINUS (260)
    IF (261) 35 36
    ELSE (262) 36
    FUNC (263) 20
    PRINT (264) 33
    RETURN (265) 32
    CONTINUE (266) 34
    THEN (267) 35 36
    WHILE (268) 37
    DO (269) 37
    OPENBLOCK (270) 29 30
    CLOSEBLOCK (271) 29 30
    VAR (272) 56
    NUMBER <number> (273) 60
    IDENTIFIER <string> (274) 59
    STRING <string> (275) 61
    ASSIGNMENT (276) 31


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    program <node> (37)
        on left: 1
        on right: 0
    global_list <node> (38)
        on left: 2 3
        on right: 1 3
    global <node> (39)
        on left: 4 5
        on right: 2 3
    statement_list <node> (40)
        on left: 6 7
        on right: 7 29 30
    print_list <node> (41)
        on left: 8 9
        on right: 9 11 33
    expression_list <node> (42)
        on left: 10 11
        on right: 15
    variable_list <node> (43)
        on left: 12 13
        on right: 13 17 56
    argument_list <node> (44)
        on left: 14 15
        on right: 55
    parameter_list <node> (45)
        on left: 16 17
        on right: 20
    declaration_list <node> (46)
        on left: 18 19
        on right: 19 29
    function <node> (47)
        on left: 20
        on right: 4
    statement <node> (48)
        on left: 21 22 23 24 25 26 27 28
        on right: 6 7 20 35 36 37
    block <node> (49)
        on left: 29 30
        on right: 28
    assign_statement <node> (50)
        on left: 31
        on right: 21
    return_statement <node> (51)
        on left: 32
        on right: 22
    print_statement <node> (52)
        on left: 33
        on right: 23
    null_statement <node> (53)
        on left: 34
        on right: 27
    if_statement <node> (54)
        on left: 35
        on right: 24
    if_else_statement <node> (55)
        on left: 36
        on right: 25
    while_statement <node> (56)
        on left: 37
        on right: 26
    relation <node> (57)
        on left: 38 39 40
        on right: 35 36 37
    expression <node> (58)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
        on right: 10 11 31 32 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 57
    declaration <node> (59)
        on left: 56
        on right: 5 18 19
    print_item <node> (60)
        on left: 57 58
        on right: 8 9
    identifier <node> (61)
        on left: 59
        on right: 12 13 20 31 54 55
    number <node> (62)
        on left: 60
        on right: 53
    string <node> (63)
        on left: 61
        on right: 58


State 0

    0 $accept: . program $end

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    program      go to state 3
    global_list  go to state 4
    global       go to state 5
    function     go to state 6
    declaration  go to state 7


State 1

   20 function: FUNC . identifier '(' parameter_list ')' statement

    IDENTIFIER  shift, and go to state 8

    identifier  go to state 9


State 2

   56 declaration: VAR . variable_list

    IDENTIFIER  shift, and go to state 8

    variable_list  go to state 10
    identifier     go to state 11


State 3

    0 $accept: program . $end

    $end  shift, and go to state 12


State 4

    1 program: global_list .

    $default  reduce using rule 1 (program)


State 5

    2 global_list: global .
    3            | global . global_list

    FUNC  shift, and go to state 1
    VAR   shift, and go to state 2

    $default  reduce using rule 2 (global_list)

    global_list  go to state 13
    global       go to state 5
    function     go to state 6
    declaration  go to state 7


State 6

    4 global: function .

    $default  reduce using rule 4 (global)


State 7

    5 global: declaration .

    $default  reduce using rule 5 (global)


State 8

   59 identifier: IDENTIFIER .

    $default  reduce using rule 59 (identifier)


State 9

   20 function: FUNC identifier . '(' parameter_list ')' statement

    '('  shift, and go to state 14


State 10

   13 variable_list: variable_list . ',' identifier
   56 declaration: VAR variable_list .

    ','  shift, and go to state 15

    $default  reduce using rule 56 (declaration)


State 11

   12 variable_list: identifier .

    $default  reduce using rule 12 (variable_list)


State 12

    0 $accept: program $end .

    $default  accept


State 13

    3 global_list: global global_list .

    $default  reduce using rule 3 (global_list)


State 14

   20 function: FUNC identifier '(' . parameter_list ')' statement

    IDENTIFIER  shift, and go to state 8

    $default  reduce using rule 16 (parameter_list)

    variable_list   go to state 16
    parameter_list  go to state 17
    identifier      go to state 11


State 15

   13 variable_list: variable_list ',' . identifier

    IDENTIFIER  shift, and go to state 8

    identifier  go to state 18


State 16

   13 variable_list: variable_list . ',' identifier
   17 parameter_list: variable_list .

    ','  shift, and go to state 15

    $default  reduce using rule 17 (parameter_list)


State 17

   20 function: FUNC identifier '(' parameter_list . ')' statement

    ')'  shift, and go to state 19


State 18

   13 variable_list: variable_list ',' identifier .

    $default  reduce using rule 13 (variable_list)


State 19

   20 function: FUNC identifier '(' parameter_list ')' . statement

    IF          shift, and go to state 20
    PRINT       shift, and go to state 21
    RETURN      shift, and go to state 22
    CONTINUE    shift, and go to state 23
    WHILE       shift, and go to state 24
    OPENBLOCK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8

    statement          go to state 26
    block              go to state 27
    assign_statement   go to state 28
    return_statement   go to state 29
    print_statement    go to state 30
    null_statement     go to state 31
    if_statement       go to state 32
    if_else_statement  go to state 33
    while_statement    go to state 34
    identifier         go to state 35


State 20

   35 if_statement: IF . relation THEN statement
   36 if_else_statement: IF . relation THEN statement ELSE statement

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    relation    go to state 40
    expression  go to state 41
    identifier  go to state 42
    number      go to state 43


State 21

   33 print_statement: PRINT . print_list

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    STRING      shift, and go to state 44
    '('         shift, and go to state 39

    print_list  go to state 45
    expression  go to state 46
    print_item  go to state 47
    identifier  go to state 42
    number      go to state 43
    string      go to state 48


State 22

   32 return_statement: RETURN . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 49
    identifier  go to state 42
    number      go to state 43


State 23

   34 null_statement: CONTINUE .

    $default  reduce using rule 34 (null_statement)


State 24

   37 while_statement: WHILE . relation DO statement

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    relation    go to state 50
    expression  go to state 41
    identifier  go to state 42
    number      go to state 43


State 25

   29 block: OPENBLOCK . declaration_list statement_list CLOSEBLOCK
   30      | OPENBLOCK . statement_list CLOSEBLOCK

    IF          shift, and go to state 20
    PRINT       shift, and go to state 21
    RETURN      shift, and go to state 22
    CONTINUE    shift, and go to state 23
    WHILE       shift, and go to state 24
    OPENBLOCK   shift, and go to state 25
    VAR         shift, and go to state 2
    IDENTIFIER  shift, and go to state 8

    statement_list     go to state 51
    declaration_list   go to state 52
    statement          go to state 53
    block              go to state 27
    assign_statement   go to state 28
    return_statement   go to state 29
    print_statement    go to state 30
    null_statement     go to state 31
    if_statement       go to state 32
    if_else_statement  go to state 33
    while_statement    go to state 34
    declaration        go to state 54
    identifier         go to state 35


State 26

   20 function: FUNC identifier '(' parameter_list ')' statement .

    $default  reduce using rule 20 (function)


State 27

   28 statement: block .

    $default  reduce using rule 28 (statement)


State 28

   21 statement: assign_statement .

    $default  reduce using rule 21 (statement)


State 29

   22 statement: return_statement .

    $default  reduce using rule 22 (statement)


State 30

   23 statement: print_statement .

    $default  reduce using rule 23 (statement)


State 31

   27 statement: null_statement .

    $default  reduce using rule 27 (statement)


State 32

   24 statement: if_statement .

    $default  reduce using rule 24 (statement)


State 33

   25 statement: if_else_statement .

    $default  reduce using rule 25 (statement)


State 34

   26 statement: while_statement .

    $default  reduce using rule 26 (statement)


State 35

   31 assign_statement: identifier . ASSIGNMENT expression

    ASSIGNMENT  shift, and go to state 55


State 36

   50 expression: '-' . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 56
    identifier  go to state 42
    number      go to state 43


State 37

   51 expression: '~' . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 57
    identifier  go to state 42
    number      go to state 43


State 38

   60 number: NUMBER .

    $default  reduce using rule 60 (number)


State 39

   52 expression: '(' . expression ')'

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 58
    identifier  go to state 42
    number      go to state 43


State 40

   35 if_statement: IF relation . THEN statement
   36 if_else_statement: IF relation . THEN statement ELSE statement

    THEN  shift, and go to state 59


State 41

   38 relation: expression . '=' expression
   39         | expression . '<' expression
   40         | expression . '>' expression
   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression

    '|'     shift, and go to state 60
    '^'     shift, and go to state 61
    '&'     shift, and go to state 62
    LSHIFT  shift, and go to state 63
    RSHIFT  shift, and go to state 64
    '+'     shift, and go to state 65
    '-'     shift, and go to state 66
    '*'     shift, and go to state 67
    '/'     shift, and go to state 68
    '='     shift, and go to state 69
    '<'     shift, and go to state 70
    '>'     shift, and go to state 71


State 42

   54 expression: identifier .
   55           | identifier . '(' argument_list ')'

    '('  shift, and go to state 72

    $default  reduce using rule 54 (expression)


State 43

   53 expression: number .

    $default  reduce using rule 53 (expression)


State 44

   61 string: STRING .

    $default  reduce using rule 61 (string)


State 45

    9 print_list: print_list . ',' print_item
   33 print_statement: PRINT print_list .

    ','  shift, and go to state 73

    $default  reduce using rule 33 (print_statement)


State 46

   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   57 print_item: expression .

    '|'     shift, and go to state 60
    '^'     shift, and go to state 61
    '&'     shift, and go to state 62
    LSHIFT  shift, and go to state 63
    RSHIFT  shift, and go to state 64
    '+'     shift, and go to state 65
    '-'     shift, and go to state 66
    '*'     shift, and go to state 67
    '/'     shift, and go to state 68

    $default  reduce using rule 57 (print_item)


State 47

    8 print_list: print_item .

    $default  reduce using rule 8 (print_list)


State 48

   58 print_item: string .

    $default  reduce using rule 58 (print_item)


State 49

   32 return_statement: RETURN expression .
   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression

    '|'     shift, and go to state 60
    '^'     shift, and go to state 61
    '&'     shift, and go to state 62
    LSHIFT  shift, and go to state 63
    RSHIFT  shift, and go to state 64
    '+'     shift, and go to state 65
    '-'     shift, and go to state 66
    '*'     shift, and go to state 67
    '/'     shift, and go to state 68

    $default  reduce using rule 32 (return_statement)


State 50

   37 while_statement: WHILE relation . DO statement

    DO  shift, and go to state 74


State 51

    7 statement_list: statement_list . statement
   30 block: OPENBLOCK statement_list . CLOSEBLOCK

    IF          shift, and go to state 20
    PRINT       shift, and go to state 21
    RETURN      shift, and go to state 22
    CONTINUE    shift, and go to state 23
    WHILE       shift, and go to state 24
    OPENBLOCK   shift, and go to state 25
    CLOSEBLOCK  shift, and go to state 75
    IDENTIFIER  shift, and go to state 8

    statement          go to state 76
    block              go to state 27
    assign_statement   go to state 28
    return_statement   go to state 29
    print_statement    go to state 30
    null_statement     go to state 31
    if_statement       go to state 32
    if_else_statement  go to state 33
    while_statement    go to state 34
    identifier         go to state 35


State 52

   19 declaration_list: declaration_list . declaration
   29 block: OPENBLOCK declaration_list . statement_list CLOSEBLOCK

    IF          shift, and go to state 20
    PRINT       shift, and go to state 21
    RETURN      shift, and go to state 22
    CONTINUE    shift, and go to state 23
    WHILE       shift, and go to state 24
    OPENBLOCK   shift, and go to state 25
    VAR         shift, and go to state 2
    IDENTIFIER  shift, and go to state 8

    statement_list     go to state 77
    statement          go to state 53
    block              go to state 27
    assign_statement   go to state 28
    return_statement   go to state 29
    print_statement    go to state 30
    null_statement     go to state 31
    if_statement       go to state 32
    if_else_statement  go to state 33
    while_statement    go to state 34
    declaration        go to state 78
    identifier         go to state 35


State 53

    6 statement_list: statement .

    $default  reduce using rule 6 (statement_list)


State 54

   18 declaration_list: declaration .

    $default  reduce using rule 18 (declaration_list)


State 55

   31 assign_statement: identifier ASSIGNMENT . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 79
    identifier  go to state 42
    number      go to state 43


State 56

   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   50           | '-' expression .

    '*'  shift, and go to state 67
    '/'  shift, and go to state 68

    $default  reduce using rule 50 (expression)


State 57

   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   51           | '~' expression .

    $default  reduce using rule 51 (expression)


State 58

   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   52           | '(' expression . ')'

    '|'     shift, and go to state 60
    '^'     shift, and go to state 61
    '&'     shift, and go to state 62
    LSHIFT  shift, and go to state 63
    RSHIFT  shift, and go to state 64
    '+'     shift, and go to state 65
    '-'     shift, and go to state 66
    '*'     shift, and go to state 67
    '/'     shift, and go to state 68
    ')'     shift, and go to state 80


State 59

   35 if_statement: IF relation THEN . statement
   36 if_else_statement: IF relation THEN . statement ELSE statement

    IF          shift, and go to state 20
    PRINT       shift, and go to state 21
    RETURN      shift, and go to state 22
    CONTINUE    shift, and go to state 23
    WHILE       shift, and go to state 24
    OPENBLOCK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8

    statement          go to state 81
    block              go to state 27
    assign_statement   go to state 28
    return_statement   go to state 29
    print_statement    go to state 30
    null_statement     go to state 31
    if_statement       go to state 32
    if_else_statement  go to state 33
    while_statement    go to state 34
    identifier         go to state 35


State 60

   41 expression: expression '|' . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 82
    identifier  go to state 42
    number      go to state 43


State 61

   42 expression: expression '^' . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 83
    identifier  go to state 42
    number      go to state 43


State 62

   43 expression: expression '&' . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 84
    identifier  go to state 42
    number      go to state 43


State 63

   44 expression: expression LSHIFT . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 85
    identifier  go to state 42
    number      go to state 43


State 64

   45 expression: expression RSHIFT . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 86
    identifier  go to state 42
    number      go to state 43


State 65

   46 expression: expression '+' . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 87
    identifier  go to state 42
    number      go to state 43


State 66

   47 expression: expression '-' . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 88
    identifier  go to state 42
    number      go to state 43


State 67

   48 expression: expression '*' . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 89
    identifier  go to state 42
    number      go to state 43


State 68

   49 expression: expression '/' . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 90
    identifier  go to state 42
    number      go to state 43


State 69

   38 relation: expression '=' . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 91
    identifier  go to state 42
    number      go to state 43


State 70

   39 relation: expression '<' . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 92
    identifier  go to state 42
    number      go to state 43


State 71

   40 relation: expression '>' . expression

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    '('         shift, and go to state 39

    expression  go to state 93
    identifier  go to state 42
    number      go to state 43


State 72

   55 expression: identifier '(' . argument_list ')'

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    STRING      shift, and go to state 44
    '('         shift, and go to state 39

    $default  reduce using rule 14 (argument_list)

    print_list       go to state 94
    expression_list  go to state 95
    argument_list    go to state 96
    expression       go to state 97
    print_item       go to state 47
    identifier       go to state 42
    number           go to state 43
    string           go to state 48


State 73

    9 print_list: print_list ',' . print_item

    '-'         shift, and go to state 36
    '~'         shift, and go to state 37
    NUMBER      shift, and go to state 38
    IDENTIFIER  shift, and go to state 8
    STRING      shift, and go to state 44
    '('         shift, and go to state 39

    expression  go to state 46
    print_item  go to state 98
    identifier  go to state 42
    number      go to state 43
    string      go to state 48


State 74

   37 while_statement: WHILE relation DO . statement

    IF          shift, and go to state 20
    PRINT       shift, and go to state 21
    RETURN      shift, and go to state 22
    CONTINUE    shift, and go to state 23
    WHILE       shift, and go to state 24
    OPENBLOCK   shift, and go to state 25
    IDENTIFIER  shift, and go to state 8

    statement          go to state 99
    block              go to state 27
    assign_statement   go to state 28
    return_statement   go to state 29
    print_statement    go to state 30
    null_statement     go to state 31
    if_statement       go to state 32
    if_else_statement  go to state 33
    while_statement    go to state 34
    identifier         go to state 35


State 75

   30 block: OPENBLOCK statement_list CLOSEBLOCK .

    $default  reduce using rule 30 (block)


State 76

    7 statement_list: statement_list statement .

    $default  reduce using rule 7 (statement_list)


State 77

    7 statement_list: statement_list . statement
   29 block: OPENBLOCK declaration_list statement_list . CLOSEBLOCK

    IF          shift, and go to state 20
    PRINT       shift, and go to state 21
    RETURN      shift, and go to state 22
    CONTINUE    shift, and go to state 23
    WHILE       shift, and go to state 24
    OPENBLOCK   shift, and go to state 25
    CLOSEBLOCK  shift, and go to state 100
    IDENTIFIER  shift, and go to state 8

    statement          go to state 76
    block              go to state 27
    assign_statement   go to state 28
    return_statement   go to state 29
    print_statement    go to state 30
    null_statement     go to state 31
    if_statement       go to state 32
    if_else_statement  go to state 33
    while_statement    go to state 34
    identifier         go to state 35


State 78

   19 declaration_list: declaration_list declaration .

    $default  reduce using rule 19 (declaration_list)


State 79

   31 assign_statement: identifier ASSIGNMENT expression .
   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression

    '|'     shift, and go to state 60
    '^'     shift, and go to state 61
    '&'     shift, and go to state 62
    LSHIFT  shift, and go to state 63
    RSHIFT  shift, and go to state 64
    '+'     shift, and go to state 65
    '-'     shift, and go to state 66
    '*'     shift, and go to state 67
    '/'     shift, and go to state 68

    $default  reduce using rule 31 (assign_statement)


State 80

   52 expression: '(' expression ')' .

    $default  reduce using rule 52 (expression)


State 81

   35 if_statement: IF relation THEN statement .
   36 if_else_statement: IF relation THEN statement . ELSE statement

    ELSE  shift, and go to state 101

    ELSE      [reduce using rule 35 (if_statement)]
    $default  reduce using rule 35 (if_statement)


State 82

   41 expression: expression . '|' expression
   41           | expression '|' expression .
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression

    '^'     shift, and go to state 61
    '&'     shift, and go to state 62
    LSHIFT  shift, and go to state 63
    RSHIFT  shift, and go to state 64
    '+'     shift, and go to state 65
    '-'     shift, and go to state 66
    '*'     shift, and go to state 67
    '/'     shift, and go to state 68

    $default  reduce using rule 41 (expression)


State 83

   41 expression: expression . '|' expression
   42           | expression . '^' expression
   42           | expression '^' expression .
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression

    '&'     shift, and go to state 62
    LSHIFT  shift, and go to state 63
    RSHIFT  shift, and go to state 64
    '+'     shift, and go to state 65
    '-'     shift, and go to state 66
    '*'     shift, and go to state 67
    '/'     shift, and go to state 68

    $default  reduce using rule 42 (expression)


State 84

   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   43           | expression '&' expression .
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression

    LSHIFT  shift, and go to state 63
    RSHIFT  shift, and go to state 64
    '+'     shift, and go to state 65
    '-'     shift, and go to state 66
    '*'     shift, and go to state 67
    '/'     shift, and go to state 68

    $default  reduce using rule 43 (expression)


State 85

   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   44           | expression LSHIFT expression .
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression

    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68

    $default  reduce using rule 44 (expression)


State 86

   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   45           | expression RSHIFT expression .
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression

    '+'  shift, and go to state 65
    '-'  shift, and go to state 66
    '*'  shift, and go to state 67
    '/'  shift, and go to state 68

    $default  reduce using rule 45 (expression)


State 87

   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   46           | expression '+' expression .
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression

    '*'  shift, and go to state 67
    '/'  shift, and go to state 68

    $default  reduce using rule 46 (expression)


State 88

   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   47           | expression '-' expression .
   48           | expression . '*' expression
   49           | expression . '/' expression

    '*'  shift, and go to state 67
    '/'  shift, and go to state 68

    $default  reduce using rule 47 (expression)


State 89

   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   48           | expression '*' expression .
   49           | expression . '/' expression

    $default  reduce using rule 48 (expression)


State 90

   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   49           | expression '/' expression .

    $default  reduce using rule 49 (expression)


State 91

   38 relation: expression '=' expression .
   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression

    '|'     shift, and go to state 60
    '^'     shift, and go to state 61
    '&'     shift, and go to state 62
    LSHIFT  shift, and go to state 63
    RSHIFT  shift, and go to state 64
    '+'     shift, and go to state 65
    '-'     shift, and go to state 66
    '*'     shift, and go to state 67
    '/'     shift, and go to state 68

    $default  reduce using rule 38 (relation)


State 92

   39 relation: expression '<' expression .
   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression

    '|'     shift, and go to state 60
    '^'     shift, and go to state 61
    '&'     shift, and go to state 62
    LSHIFT  shift, and go to state 63
    RSHIFT  shift, and go to state 64
    '+'     shift, and go to state 65
    '-'     shift, and go to state 66
    '*'     shift, and go to state 67
    '/'     shift, and go to state 68

    $default  reduce using rule 39 (relation)


State 93

   40 relation: expression '>' expression .
   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression

    '|'     shift, and go to state 60
    '^'     shift, and go to state 61
    '&'     shift, and go to state 62
    LSHIFT  shift, and go to state 63
    RSHIFT  shift, and go to state 64
    '+'     shift, and go to state 65
    '-'     shift, and go to state 66
    '*'     shift, and go to state 67
    '/'     shift, and go to state 68

    $default  reduce using rule 40 (relation)


State 94

    9 print_list: print_list . ',' print_item
   11 expression_list: print_list . ',' expression

    ','  shift, and go to state 102


State 95

   15 argument_list: expression_list .

    $default  reduce using rule 15 (argument_list)


State 96

   55 expression: identifier '(' argument_list . ')'

    ')'  shift, and go to state 103


State 97

   10 expression_list: expression .
   41 expression: expression . '|' expression
   42           | expression . '^' expression
   43           | expression . '&' expression
   44           | expression . LSHIFT expression
   45           | expression . RSHIFT expression
   46           | expression . '+' expression
   47           | expression . '-' expression
   48           | expression . '*' expression
   49           | expression . '/' expression
   57 print_item: expression .
